# copda

./: .gitignore  .gitlab-ci.yml  .mdl_style.rb  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build.sh  dependencies.rosinstall  install-deps.sh
daa_anchor_management_ros/: CMakeLists.txt  package.xml  setup.py
daa_anchor_management_ros/launch/: anchor_management.launch
daa_anchor_management_ros/nodes/: anchor_management_node.py
daa_anchor_management_ros/src/daa_anchor_management/: __init__.py  anchor.py  anchor_management.py  match_function.py
daa_bringup/: CMakeLists.txt  package.xml
daa_bringup/launch/: bag_demo.launch  bringup.launch
daa_bringup/rviz/: table_sim.rviz
daa_color_classification/: CMakeLists.txt  README.md  package.xml
daa_color_classification/cfg/: ColorClassification.cfg
daa_color_classification/include/: ColorClassifier.h
daa_color_classification/launch/: node.launch
daa_color_classification/msg/: ColorClassificationResults.msg  Colors.msg
daa_color_classification/src/: ColorClassifier.cpp  node.cpp
daa_knowledge_base_ros/: CMakeLists.txt  package.xml  requirements.txt  setup.py
daa_knowledge_base_ros/config/: kb_config_maker_space.yaml
daa_knowledge_base_ros/launch/: knowledge_base.launch
daa_knowledge_base_ros/nodes/: knowledge_base_publisher.py  knowledge_base_server.py
daa_knowledge_base_ros/src/daa_kb_client/: __init__.py  kb_client_ros.py
daa_knowledge_base_ros/src/daa_knowledge_base/: __init__.py  kb_client.py  kb_handle.py  kb_ontology.py  onto_methods.py  prolog_foreign.py  prolog_mt.py
daa_knowledge_base_ros/src/prolog/: maker_space_rules.pl  reload.pl  rules.pl  rules_ref.pl
daa_knowledge_base_ros/srv/: Query.srv  Update.srv
daa_msgs/: CMakeLists.txt  package.xml
daa_msgs/msg/: AnchoredObject.msg  AnchoredObjectArray.msg
daa_tools/: CMakeLists.txt  README.md  package.xml
daa_tools/launch/: anchored_objects_to_markers.launch  detection3d_to_img.launch  detection3d_to_markers.launch
daa_tools/nodes/: anchored_objects_to_markers.py  detection3d_to_img.py  detection3d_to_markers.py
daa_tools/scripts/: bag_to_imgs.py  imgs_to_bag.py  video_to_bag.py
daa_tracker_ros/: CMakeLists.txt  package.xml
daa_tracker_ros/config/: mht_config_maker_space.yaml  mht_config_marina.yaml
daa_tracker_ros/include/: tracker_node.h
daa_tracker_ros/launch/: tracker.launch
daa_tracker_ros/msg/: Track.msg
daa_tracker_ros/src/: tracker_node.cpp
daa_tracker_ros/src/daa_tracker/: CMakeLists.txt
daa_tracker_ros/src/daa_tracker/include/data_structures/: tree.h
daa_tracker_ros/src/daa_tracker/include/multi_hyp_tracker/: Hypothesis.h  MultiHypTracker.h  State.h  observables.h
daa_tracker_ros/src/daa_tracker/include/utils/: Estimator.h  FixedEstimator.h  HistogramEstimator.h  KalmanFilter.h  estimator_utils.h  math.h  tracker_config.h  types.h
daa_tracker_ros/src/daa_tracker/src/cliquer/: CMakeLists.txt
daa_tracker_ros/src/daa_tracker/src/cliquer/src/: ChangeLog  cl.c  cliquer.c  cliquer.h  cliquerconf.h  graph.c  graph.h  misc.h  reorder.c  reorder.h  set.h  testcase-large-exact8.h  testcase-large-over8.h  testcase-large-w-60-64-mxml.h  testcase-large-w-over60.h  testcases.c
daa_tracker_ros/src/daa_tracker/src/multi_hyp_tracker/: MultiHypTracker.cpp  State.cpp
daa_tracker_ros/src/daa_tracker/src/problib/: CMakeLists.txt
daa_tracker_ros/src/daa_tracker/src/problib/include/problib/: conversions.h  datatypes.h  globals.h
daa_tracker_ros/src/daa_tracker/src/problib/include/problib/pdfs/: Gaussian.h  Hybrid.h  Mixture.h  PDF.h  PMF.h  Uniform.h
daa_tracker_ros/src/daa_tracker/src/problib/src/: conversions.cpp  test.cpp
daa_tracker_ros/src/daa_tracker/src/problib/src/pdfs/: Gaussian.cpp  Hybrid.cpp  Mixture.cpp  PDF.cpp  PMF.cpp  Uniform.cpp
daa_tracker_ros/src/daa_tracker/src/utils/: FixedEstimator.cpp  HistogramEstimator.cpp  KalmanFilter.cpp  estimator_utils.cpp  math.cpp  tracker_config.cpp
