<?xml version="1.0"?>
<package format="2">
  <name>daa_anchor_management_ros</name>
  <version>0.0.0</version>
  <description>Anchor spawning and updating in the CoPDA DAA.</description>

  <maintainer email="zongyao.yi@dfki.de">Zongyao Yi</maintainer>
  <author email="zongyao.yi@dfki.de">Zongyao Yi</author>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>python3-networkx</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-simplejson</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
