<?xml version="1.0"?>
<package format="2">
  <name>daa_bringup</name>
  <version>0.0.0</version>
  <description>Top-level launch and configuration files for the CoPDA Dynamic Anchoring Agent</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>daa_anchor_management_ros</exec_depend>
  <exec_depend>daa_knowledge_base_ros</exec_depend>
  <exec_depend>daa_tracker_ros</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
