<?xml version="1.0"?>
<package format="2">
  <name>daa_knowledge_base_ros</name>
  <version>0.0.0</version>
  <description>Knowledge base management for the CoPDA DAA.</description>

  <maintainer email="zongyao.yi@dfki.de">Zongyao Yi</maintainer>
  <author email="zongyao.yi@dfki.de">Zongyao Yi</author>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>daa_tools</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pbr_objects</exec_depend>
  <exec_depend>pose_selector</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-owlready2-pip</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>python3-simplejson</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>swi-prolog</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
