<?xml version="1.0"?>
<package format="2">
  <name>daa_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for the CoPDA dynamic anchoring agent</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>vision_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
